--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,9 @@
         "php": ">=5.3",
         "kevupton/ethereal": "^2.0"
     },
+    "require-dev": {
+        "laravel/lumen-framework": "5.3.*"
+    },
     "autoload": {
         "psr-4": {
             "Kevupton\\MerchantWarrior\\": "src/Kevupton/MerchantWarrior/"
