--- a/composer.json
+++ b/composer.json
@@ -11,11 +11,7 @@
         }
     ],
     "require": {
-        "php": ">=5.3",
-        "kevupton/ethereal": "^2.0"
-    },
-    "require-dev": {
-        "laravel/lumen-framework": "5.3.*"
+        "php": ">=5.3"
     },
     "autoload": {
         "psr-4": {
@@ -25,5 +21,9 @@
             "src/Kevupton/MerchantWarrior/Helpers/helpers.php"
         ]
     },
-    "minimum-stability": "stable"
+    "minimum-stability": "stable",
+    "require-dev": {
+        "laravel/lumen": "^5.5",
+        "laravel/laravel": "^5.5"
+    }
 }
